--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "python-jose[cryptography]>=3.5.0",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
+    "websockets>=15.0.1",
 ]
 
 [dependency-groups]
